; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_connection.c_rds_conn_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_connection.c_rds_conn_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_connection = type { i64, i32, i32 }

@.str = private unnamed_addr constant [31 x i8] c"connection %pI4 to %pI4 reset\0A\00", align 1
@s_conn_reset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rds_connection*)* @rds_conn_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rds_conn_reset(%struct.rds_connection* %0) #0 {
  %2 = alloca %struct.rds_connection*, align 8
  store %struct.rds_connection* %0, %struct.rds_connection** %2, align 8
  %3 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %4 = getelementptr inbounds %struct.rds_connection, %struct.rds_connection* %3, i32 0, i32 2
  %5 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %6 = getelementptr inbounds %struct.rds_connection, %struct.rds_connection* %5, i32 0, i32 1
  %7 = call i32 @rdsdebug(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32* %4, i32* %6)
  %8 = load i32, i32* @s_conn_reset, align 4
  %9 = call i32 @rds_stats_inc(i32 %8)
  %10 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %11 = call i32 @rds_send_reset(%struct.rds_connection* %10)
  %12 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %13 = getelementptr inbounds %struct.rds_connection, %struct.rds_connection* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  ret void
}

declare dso_local i32 @rdsdebug(i8*, i32*, i32*) #1

declare dso_local i32 @rds_stats_inc(i32) #1

declare dso_local i32 @rds_send_reset(%struct.rds_connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
